# Trustlang

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix  test.o.tags  test.tr  trustlang.code-workspace
.github/workflows/: build-site.yml  static.yml
docs/: global.css  todo.html
page/: todo.neo
src/: lib.rs  main.rs
src/lexer/: chacacter_buffer.rs  mod.rs  token_buffer.rs  token_stream.rs
src/parser/: expression.rs  mod.rs  types.rs
src/parser/declaration/: function.rs  mod.rs
src/parser/expression/: control_flow.rs  mod.rs  operator.rs  value.rs
src/parser/expression/block/: mod.rs
src/parser/item/: function.rs  mod.rs
src/parser/item/module/: mod.rs
