[package]
name = "trustlang"
version = "0.0.1"
edition = "2021"

[features]
xid = ["orecc-front/xid"]

[dependencies]
# orecc-front = { git = "https://github.com/InfiniteCoder01/orecc-front.git" }
# orecc-back = { git = "https://github.com/InfiniteCoder01/orecc-back.git" }
orecc-front = { path = "../../Libraries/orecc/orecc-front" }
orecc-back = { path = "../../Libraries/orecc/orecc-back" }
target-lexicon = { version = ">=0.12.0" }

clap = { version = "4.4.0", features = ["derive"] }
rustyline = "12.0.0"
codespan-reporting = "0.11.1"
