[package]
name = "trustlang"
version = "0.0.1"
edition = "2021"

[features]
# xid = ["orecc-front/xid"]

[dependencies]

# Frontend
# logos = "0.13.0"
logos = { git = "https://github.com/InfiniteCoder01/logos.git", branch = "rc-arc-sources" }

# Backend
orecc-back = { path = "../../Libraries/orecc/orecc-back" }
target-lexicon = { version = ">=0.12.0" }
codespan = "0.11.1"

# CLI
clap = { version = "4.4.0", features = ["derive"] }
rustyline = "12.0.0"
codespan-reporting = "0.11.1"
